fixed overlapping text

--- a/dplace_app/static/css/dplace.css
+++ b/dplace_app/static/css/dplace.css
@@ -30,7 +30,6 @@ label.light {
 }
 
 .variable-label {
-    width: 2rem;
     text-align: right;
 }
 
